--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng deploy --base-href=https://dev-cv.philipp-bonin.com --cname=dev-cv.philipp-bonin.com"
+    "deploy": "ng deploy --base-href=https://dev-cv.philipp-bonin.com --cname=dev-cv.philipp-bonin.com",
+    "g": "ng generate"
   },
   "private": true,
   "dependencies": {
@@ -31,7 +32,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.2",
-    "@angular/cli": "~16.2.2",
+    "@angular/cli": "~16.2.12",
     "@angular/compiler-cli": "^16.2.0",
     "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~4.3.0",
