--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "dev": "ng serve",
     "start": "ng serve --open --host 0.0.0.0",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng deploy --base-href=https://dev-cv.philipp-bonin.com --cname=dev-cv.philipp-bonin.com",
     "g": "ng generate"
   },
   "private": true,
@@ -38,7 +38,6 @@
     "@types/jasmine": "~4.3.0",
     "@types/js-yaml": "^4.0.9",
     "@types/markdown-it": "^14.1.1",
-    "angular-cli-ghpages": "^1.0.7",
     "autoprefixer": "^10.4.16",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
